fix alignmentissue with projects

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3222,6 +3222,14 @@
 				text-align: center;
 			}
 
+			#three {
+				text-align: center;
+			}
+
+			#four {
+				text-align: center;
+			}
+
 	}
 
 /* Small */
